<resources>
    <string name="app_name">Evo_Menu</string>
    <string name="UsernameLogin">Username</string>
    <string name="PasswordLogin">Password</string>
    <string name="btLogin">Login</string>
    <string name="btRegistar">Registar</string>
    <string name="nopen">open</string>
    <string name="nclose">close</string>
    <string name="textErrorMail">Username errado</string>
    <string name="textErrorPass">Password errada</string>
    <string name="btCancelarRegisto">Cancelar Registo</string>
    <string name="etRegistarNif">NIF</string>
    <string name="etRegistarTelemovel">Telemovel</string>
    <string name="etRegistarEmail">Email</string>
    <string name="etRegistarPass">Password</string>
    <string name="etRegistarUsername">Username</string>
    <string name="etRegistarNome">Nome Completo</string>
    <string name="btEditarPerfil">Editar Perfil</string>
    <string name="btConcluirEdicao">Conluir edição</string>
    <string name="Nif">NIF</string>
    <string name="Telemovel">Telemovel</string>
    <string name="remover" />
    <string name="etRegistarPais">País</string>
    <string name="etRegistarCidade">Cidade</string>
    <string name="etRegistarRua">Rua</string>
    <string name="etRegistarCodPostal">Código Postal</string>
    <string name="txtMorada">Morada</string>
    <string name="no_internet">Sem acesso à internet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>